syntax = "proto3";

package api;

service CronjobAdmin {
  rpc Submit (Command) returns (JobId) {}
  rpc Stop (JobId) returns (Empty) {}
  rpc Status (JobId) returns (StatusResponse) {}
  rpc GetLogs (JobId) returns (stream Log) {}
}

enum JobType {
  SINGLE = 0;   // run once
  INTERVAL = 1; // run every interval
}

message Command {
  string command = 1;
  JobType job_type = 2;
  string interval = 3;
}

message JobId {
  string id = 1;
}

message Empty {}

enum StatusType {
  RUNNING = 0;
  COMPLETED = 1;
  STOPPED = 2;
  TIMEOUT = 3;
}

message StatusResponse {
  StatusType status = 1;
  int32 exitCode = 2;
}

message Log {
  string logLine = 1;
}